# Herbarium

./: .gitignore  README.md  README_RU.md  go.mod  go.sum  main.go  meson.build  meson_options.txt
cli/: main.go
data/: meson.build  ru.ximper.Herbarium.desktop.in.in  ru.ximper.Herbarium.metainfo.xml.in.in
data/icons/: meson.build
gui/: main.go  modcard.go  window.go
lib/: config.go  game.go  i18n.go  misc.go  parsing.go  steam.go  structs.go
po/: LINGUAS  POTFILES.in  herbarium.pot  ru.po  update_po.sh  update_pot.sh  update_potfiles.sh
